imagem do projeto adicionada

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,5 +1,5 @@
 :root{
-    --background-color: #64dd17;
+    --background-color: #00e676;
     --text-color: hsl(227, 10%, 46%);
     --card-color: hsl(0, 0%, 59%);
 }
